--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
   "devDependencies": {
     "@armorjs/build": "^0.0.2",
     "@types/jest": "^25.2.1",
-    "@types/node": "^13.11.1",
+    "@types/node": "^13.13.0",
     "axios-mock-adapter": "^1.17.0",
     "gulp": "^4.0.2",
     "jest": "^25.3.0",
     "jest-sonar-reporter": "^2.0.0",
-    "ts-jest": "^25.3.1",
+    "minimist": "^1.2.5",
+    "ts-jest": "^25.4.0",
     "ts-lint": "^4.5.1",
     "typescript": "^3.8.3"
   }
