--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.tests=tests
 
 sonar.projectKey=armorjs_browser
 sonar.organization=armorjs
-sonar.exclusions=,tests**,**/tests/**,**/coverage/**,**/dist/**,**/old/**,test-report.xml,webpack.config.js,prettier.config.js,**/gulpfile.js,**/gulpfile.ts,**/samples/**, **/node_modules/**
+sonar.exclusions=tests**,**/tests/**,**/coverage/**,**/dist/**,**/old/**,test-report.xml,webpack.config.js,jest.config.js,prettier.config.js,**/gulpfile.js,**/gulpfile.ts,**/samples/**, **/node_modules/**
 #sonar.inclusions=
 sonar.testExecutionReportPaths=test-report.xml
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
