--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@armorjs/browser",
+  "name": "@armorjs/headless",
   "version": "0.0.0",
   "description": "",
   "main": "./dist/index.js",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/armorjs/browser.git"
+    "url": "git+https://github.com/armorjs/headless.git"
   },
   "keywords": [
     "typescript",
@@ -22,9 +22,9 @@
   "author": "Michael Brich",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/armorjs/browser/issues"
+    "url": "https://github.com/armorjs/headless/issues"
   },
-  "homepage": "https://github.com/armorjs/browser#readme",
+  "homepage": "https://github.com/armorjs/headless#readme",
   "dependencies": {
     "@armorjs/config": "^0.0.2",
     "axios": "^0.19.2"
