--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/armorjs/headless#readme",
   "dependencies": {
     "@armorjs/config": "^0.0.2",
+    "@armorjs/key": "^0.0.2",
     "axios": "^0.19.2"
   },
   "devDependencies": {
