--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "dependencies": {
     "@armorjs/config": "^0.0.2",
     "@armorjs/key": "^0.0.2",
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "jsdom": "^16.2.2"
   },
   "devDependencies": {
     "@armorjs/build": "^0.0.2",
