Refactoring for module separation

--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
   },
   "homepage": "https://github.com/armorjs/headless#readme",
   "dependencies": {
-    "@armorjs/config": "^0.0.2",
     "@armorjs/key-store": "^0.0.4",
     "axios": "^0.19.2",
     "jsdom": "^16.2.2"
@@ -40,6 +39,7 @@
     "jest": "^25.3.0",
     "jest-sonar-reporter": "^2.0.0",
     "minimist": "^1.2.5",
+    "supertest": "^4.0.2",
     "ts-jest": "^25.4.0",
     "ts-lint": "^4.5.1",
     "typescript": "^3.8.3"
