Fixed async test failure in response-api tests

--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "axios-mock-adapter": "^1.17.0",
     "gulp": "^4.0.2",
     "jest": "^25.3.0",
+    "jest-dev-server": "^4.4.0",
     "jest-sonar-reporter": "^2.0.0",
     "minimist": "^1.2.5",
+    "serve-handler": "^6.1.2",
     "supertest": "^4.0.2",
     "ts-jest": "^25.4.0",
     "ts-lint": "^4.5.1",
