--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@armorjs/build": "^0.0.2",
     "@types/jest": "^25.2.1",
+    "@types/jsdom": "^16.2.1",
     "@types/node": "^13.13.0",
     "axios-mock-adapter": "^1.17.0",
     "gulp": "^4.0.2",
