--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@armorjs/key-store": "^0.0.4",
     "@toreda/map": "^0.2.0",
+    "@toreda/strong-types": "https://github.com/toreda/strong-types",
     "axios": "^0.19.2",
     "jsdom": "^16.2.2",
     "vm2": "^3.9.2"
