--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,36 +1,28 @@
 {
-	"exclude": [
-		"node_modules",
-		"**/*.spec.ts",
-		"tests",
-		"dist/**"
-	],
-	"include": [
-		"**/src/index.ts"
-	],
-	"filesGlob": [
-		"./src/**/*.ts",
-		"!./node_modules/**"
-	],
+	"exclude": ["node_modules", "dist"],
+	"include": ["src/**/*.ts", "tests/**/*.ts"],
+	"filesGlob": ["./src/**/*.ts", "!./node_modules/**"],
 	"rootDir": ".",
 	"compilerOptions": {
-		"preserveConstEnums": true,
-		"module": "commonjs",
-		"esModuleInterop": true,
-		"moduleResolution": "node",
-		"target": "es6",
-		"traceResolution": false,
-		"lib": ["es6", "dom"],
-		"isolatedModules": false,
-		"removeComments": true,
-		"declaration": true,
-		"sourceMap": true,
-		"outDir": "./dist",
 		"allowUnreachableCode": false,
-		"strictNullChecks": true,
-		"strictBindCallApply": true,
-		"strictPropertyInitialization": true,
 		"alwaysStrict": true,
-		"noImplicitUseStrict": false
+		"baseUrl": ".",
+		"declaration": true,
+		"esModuleInterop": true,
+		"isolatedModules": false,
+		"lib": ["es6", "dom"],
+		"module": "commonjs",
+		"moduleResolution": "node",
+		"noImplicitUseStrict": false,
+		"outDir": "./dist",
+		"paths": {"src/*": ["./src/*"]},
+		"preserveConstEnums": true,
+		"removeComments": true,
+		"sourceMap": true,
+		"strictBindCallApply": true,
+		"strictNullChecks": true,
+		"strictPropertyInitialization": true,
+		"target": "es6",
+		"traceResolution": false
 	}
 }
